fix : 뷰 리졸버 에러 및 authorization=null 버그 수정

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -106,7 +106,7 @@
         })
         .then(function(response) {
             alert('로그인 성공!');
-            window.location.href = '/boards/list'; // 로그인 후 게시물 목록 페이지로 리디렉션
+            window.location.href = '/board/list'; // 로그인 후 게시물 목록 페이지로 리디렉션
         })
         .catch(function(error) {
             const errorMessage = error.response && error.response.data && error.response.data.message
