--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -236,9 +236,9 @@
         window.location.href = '/members/logout';
     });
 
-    // 게시물 작성 버튼 클릭 시 /boards/create 페이지로 이동
+    // 게시물 작성 버튼 클릭 시 /board/create 페이지로 이동
     document.getElementById('createPostButton').addEventListener('click', function() {
-        window.location.href = '/boards/create';
+        window.location.href = '/board/create';
     });
 
     // 회원정보 수정 버튼 클릭 시 /members/edit 페이지로 이동
