--- a/src/main/resources/templates/board/create.html
+++ b/src/main/resources/templates/board/create.html
@@ -31,7 +31,7 @@
     <div class="card bg-light col-md-8 p-4">
         <div class="card-body">
             <h1 class="text-dark">게시글 등록</h1>
-            <form action="#" th:action="@{/boards/create}" method="post" enctype="multipart/form-data">
+            <form action="#" th:action="@{/board/create}" method="post" enctype="multipart/form-data">
                 <div class="form-group">
                     <label for="boardTitle">제목:</label>
                     <input type="text" id="boardTitle" name="boardTitle" class="form-control" required>
@@ -43,8 +43,8 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="category">카테고리:</label>
-                    <select id="category" name="category" class="form-control" required>
+                    <label for="category2">카테고리:</label>
+                    <select id="category2" name="category2" class="form-control" required>
                         <option value="FOOD">먹거리</option>
                         <option value="PLAY">놀거리</option>
                         <!-- 더 많은 카테고리 추가 가능 -->
