fix : 자잘한 버그 수정

--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -60,7 +60,6 @@
                 <button id="logoutButton" class="btn btn-danger logout-button">로그아웃</button>
 
                 <div id="userInfoContainer" class="user-info" style="display: none;">
-                    <img id="userProfileImage" src="" alt="Profile Picture">
                     <span id="userNameDisplay"></span>
                     <button id="editProfileButton" class="btn btn-info btn-sm" style="margin-left: 10px;">회원정보 수정</button>
                 </div>
@@ -136,7 +135,7 @@
 
     function loadPosts(page) {
         currentPage = page;
-        fetch(`/v1/boards?page=${page}&size=${postsPerPage}`)
+        fetch(`/v2/boards?page=${page}&size=${postsPerPage}`)
             .then(response => response.json())
             .then(responseData => {
                 const postsData = responseData.data;
@@ -171,7 +170,7 @@
     }
 
     function viewBoard(postId) {
-        window.location.href = `/boards/${postId}`;
+        window.location.href = `/board/${postId}`;
     }
 
     function updatePagination(currentPage) {
