--- a/src/main/resources/templates/sign-up.html
+++ b/src/main/resources/templates/sign-up.html
@@ -72,6 +72,8 @@
             text-decoration: underline;
         }
     </style>
+
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 <body>
 <div class="container">
@@ -108,7 +110,7 @@
         <button type="submit">가입하기</button>
     </form>
     <div class="login-link">
-        이미 계정이 있으신가요? <a href="login.html">로그인</a>
+        이미 계정이 있으신가요? <a href="/members/login">로그인</a>
     </div>
 </div>
 
