--- a/src/main/resources/templates/board/create.html
+++ b/src/main/resources/templates/board/create.html
@@ -27,6 +27,24 @@
         #map {
             width: 500px;
             height: 400px;
+            margin-top: 20px;
+        }
+        #placesList, #pagination {
+            margin-top: 10px;
+            max-height: 400px;
+            overflow-y: auto;
+        }
+        #placesList .item {
+            padding: 10px;
+            border-bottom: 1px solid #e0e0e0;
+            cursor: pointer;
+        }
+        #placesList .item:hover {
+            background-color: #f1f1f1;
+        }
+        #mapContainer {
+            display: flex;
+            gap: 20px;
         }
     </style>
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=cab40e28a8c1babd29615109dec388af&libraries=services"></script>
@@ -55,9 +73,26 @@
                     </select>
                 </div>
 
-                <div id="map"></div> <!-- 지도 -->
-
                 <div class="form-group">
+                    <label for="keyword">위치 검색:</label>
+                    <input type="text" id="keyword" class="form-control" placeholder="예: 서울역">
+                    <button type="button" onclick="searchPlaces()" class="btn btn-primary mt-2">검색</button>
+                </div>
+
+                <div id="mapContainer">
+                    <div id="map"></div> <!-- 지도 -->
+                    <div id="resultList">
+                        <ul id="placesList"></ul>
+                        <div id="pagination"></div>
+                    </div>
+                </div>
+
+                <!-- 선택한 위치 정보를 저장할 hidden input들 -->
+                <input type="hidden" id="selectedLatitude" name="latitude">
+                <input type="hidden" id="selectedLongitude" name="longitude">
+                <input type="hidden" id="selectedAddress" name="address">
+
+                <div class="form-group mt-3">
                     <label for="image">이미지:</label>
                     <input type="file" id="image" name="image" class="form-control-file">
                 </div>
@@ -67,69 +102,193 @@
     </div>
 </section>
 <script>
+    var markers = [];
+    var mapContainer = document.getElementById('map'),
+        mapOption = {
+            center: new kakao.maps.LatLng(37.566826, 126.9786567),
+            level: 3
+        };
+    var map = new kakao.maps.Map(mapContainer, mapOption);
+    var ps = new kakao.maps.services.Places();
+    var infowindow = new kakao.maps.InfoWindow({zIndex: 1});
+
     function initMap() {
-    var container = document.getElementById('map');
-    var options = {
-        center: new kakao.maps.LatLng(33.450701, 126.570667),
-        level: 3
-    };
+        var marker = new kakao.maps.Marker({ position: map.getCenter() });
+        marker.setMap(map);
+        var geocoder = new kakao.maps.services.Geocoder();
 
-    var map = new kakao.maps.Map(container, options);
-    var geocoder = new kakao.maps.services.Geocoder();
-    var marker = new kakao.maps.Marker({position: map.getCenter()});
-    marker.setMap(map);
+        kakao.maps.event.addListener(map, 'click', function (mouseEvent) {
+            var clickedPosition = mouseEvent.latLng;
 
-    // 인포 윈도우를 하나만 생성하여 재사용
-    var infowindow = new kakao.maps.InfoWindow({zindex:1});
+            // 기존 마커 제거
+            removeMarker();
 
-    // 지도 클릭 시 마커 이동 및 주소 변환
-    kakao.maps.event.addListener(map, 'click', function(mouseEvent) {
-        var clickedPosition = mouseEvent.latLng;
-        marker.setPosition(clickedPosition);
+            // 새로운 마커 생성
+            marker = new kakao.maps.Marker({
+                position: clickedPosition
+            });
+            marker.setMap(map);
+            markers.push(marker);
 
-        // 좌표를 주소로 변환
-        geocoder.coord2Address(clickedPosition.getLng(), clickedPosition.getLat(), function(result, status) {
-            if (status === kakao.maps.services.Status.OK) {
-                var roadAddress = result[0].road_address ? result[0].road_address.address_name : '';
-                var address = result[0].address.address_name;
-                var fullAddress = roadAddress ? roadAddress + " (" + address + ")" : address;
+            geocoder.coord2Address(clickedPosition.getLng(), clickedPosition.getLat(), function (result, status) {
+                if (status === kakao.maps.services.Status.OK) {
+                    var roadAddress = result[0].road_address ? result[0].road_address.address_name : '';
+                    var address = result[0].address.address_name;
+                    var fullAddress = roadAddress ? roadAddress + " (" + address + ")" : address;
 
-                // 인포윈도우 내용 업데이트 및 위치 재설정
-                infowindow.setContent('<div style="padding:5px;">' + fullAddress + '</div>');
-                infowindow.open(map, marker);
+                    infowindow.setContent('<div style="padding:5px;">' + fullAddress + '</div>');
+                    infowindow.open(map, marker);
 
-                // 백엔드로 주소 및 좌표 전송
-                fetch('http://localhost:8080/api/map/marker', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                        'Authorization': 'Bearer YOUR_JWT_TOKEN'
-                    },
-                    body: JSON.stringify({
-                        latitude: clickedPosition.getLat(),
-                        longitude: clickedPosition.getLng(),
-                        description: fullAddress
-                    })
-                })
-                .then(response => {
-                    if (!response.ok) {
-                        throw new Error('네트워크 응답에 문제가 있습니다: ' + response.statusText);
-                    }
-                    return response.json();
-                })
-                .then(data => {
-                    console.log('마커가 성공적으로 저장되었습니다:', data);
-                })
-                .catch(error => {
-                    console.error('마커 저장 중 오류 발생:', error);
-                });
-            }
+                    // 위치 검색창에 주소 업데이트
+                    document.getElementById('keyword').value = fullAddress;
+
+                    // 선택한 위치 정보를 hidden input에 저장
+                    document.getElementById('selectedLatitude').value = clickedPosition.getLat();
+                    document.getElementById('selectedLongitude').value = clickedPosition.getLng();
+                    document.getElementById('selectedAddress').value = fullAddress;
+                }
+            });
         });
-    });
-}
+    }
+
+    function searchPlaces() {
+        var keyword = document.getElementById('keyword').value;
+
+        if (!keyword.replace(/^\s+|\s+$/g, '')) {
+            alert('키워드를 입력해주세요!');
+            return false;
+        }
+
+        ps.keywordSearch(keyword, placesSearchCB);
+    }
+
+    function placesSearchCB(data, status, pagination) {
+        if (status === kakao.maps.services.Status.OK) {
+            displayPlaces(data);
+            displayPagination(pagination);
+        } else if (status === kakao.maps.services.Status.ZERO_RESULT) {
+            alert('검색 결과가 존재하지 않습니다.');
+        } else if (status === kakao.maps.services.Status.ERROR) {
+            alert('검색 결과 중 오류가 발생했습니다.');
+        }
+    }
+
+    function displayPlaces(places) {
+        var listEl = document.getElementById('placesList'),
+            bounds = new kakao.maps.LatLngBounds(),
+            fragment = document.createDocumentFragment();
+
+        removeAllChildNods(listEl);
+        removeMarker(); // 모든 마커 제거
+
+        for (var i = 0; i < places.length; i++) {
+            var placePosition = new kakao.maps.LatLng(places[i].y, places[i].x),
+                itemEl = getListItem(i, places[i]);
+
+            bounds.extend(placePosition);
+
+            // 검색 결과 항목 클릭 시 해당 위치로 지도 이동 및 마커 설정
+            (function (placePosition, address) {
+                itemEl.onclick = function () {
+                    // 모든 마커 제거
+                    removeMarker();
+
+                    // 새로운 마커 추가
+                    var marker = new kakao.maps.Marker({
+                        position: placePosition
+                    });
+                    marker.setMap(map);
+                    markers.push(marker);
+
+                    // 지도 중심을 선택한 위치로 이동
+                    map.setCenter(placePosition);
+
+                    // 인포윈도우에 주소 표시
+                    infowindow.setContent('<div style="padding:5px;">' + address + '</div>');
+                    infowindow.open(map, marker);
+
+                    // 검색창에 클릭한 주소 입력
+                    document.getElementById('keyword').value = address;
+
+                    // 선택한 위치 정보를 hidden input에 저장
+                    document.getElementById('selectedLatitude').value = placePosition.getLat();
+                    document.getElementById('selectedLongitude').value = placePosition.getLng();
+                    document.getElementById('selectedAddress').value = address;
+                };
+            })(placePosition, places[i].address_name);
+
+            fragment.appendChild(itemEl);
+        }
+
+        listEl.appendChild(fragment);
+        map.setBounds(bounds);
+    }
+
+    function getListItem(index, places) {
+        var el = document.createElement('li'),
+            itemStr = '<span class="markerbg marker_' + (index + 1) + '"></span>' +
+                '<div class="info">' +
+                '   <h5>' + places.place_name + '</h5>';
+
+        if (places.road_address_name) {
+            itemStr += '    <span>' + places.road_address_name + '</span>' +
+                '   <span class="jibun gray">' + places.address_name + '</span>';
+        } else {
+            itemStr += '    <span>' + places.address_name + '</span>';
+        }
+
+        itemStr += '  <span class="tel">' + places.phone + '</span>' +
+            '</div>';
+
+        el.innerHTML = itemStr;
+        el.className = 'item';
+
+        return el;
+    }
+
+    function removeMarker() {
+        for (var i = 0; i < markers.length; i++) {
+            markers[i].setMap(null);
+        }
+        markers = [];
+    }
+
+    function displayPagination(pagination) {
+        var paginationEl = document.getElementById('pagination'),
+            fragment = document.createDocumentFragment(),
+            i;
+
+        while (paginationEl.hasChildNodes()) {
+            paginationEl.removeChild(paginationEl.lastChild);
+        }
+
+        for (i = 1; i <= pagination.last; i++) {
+            var el = document.createElement('a');
+            el.href = "#";
+            el.innerHTML = i;
+
+            if (i === pagination.current) {
+                el.className = 'on';
+            } else {
+                el.onclick = (function (i) {
+                    return function () {
+                        pagination.gotoPage(i);
+                    }
+                })(i);
+            }
+
+            fragment.appendChild(el);
+        }
+        paginationEl.appendChild(fragment);
+    }
+
+    function removeAllChildNods(el) {
+        while (el.hasChildNodes()) {
+            el.removeChild(el.lastChild);
+        }
+    }
 
     window.onload = initMap;
-
 </script>
 </body>
 </html>
